Fix layout issue

--- a/public/privacy.css
+++ b/public/privacy.css
@@ -1,12 +1,4 @@
-@font-face {
-  font-family: 'Comme-Light';
-  src: url('./images/comme.extralight.ttf');
-  font-weight: normal;
-  font-style: normal;
-}
-
 body {
-  font: 'Comme-Light';
   text-align: center;
   background-image: url('woods-background.jpg') !important;
   background-size: cover;
@@ -20,4 +12,16 @@ body {
 
 section {
   background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px;
+  margin: 20px;
+}
+
+button {
+  background-color: #1D4355;
+  color: white;
+  padding: 5px 8px 5px 8px;
+}
+
+header {
+  margin-top: 20px;
 }
